src/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: multi-container
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080      
  type: NodePort
